--- a/Smartphone-sales-manager/nbproject/project.properties
+++ b/Smartphone-sales-manager/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Smartphone-sales-manager
-main.class=smartphone.sales.manager.SmartphoneSalesManager
+main.class=Smartphone_sales_management.UI.Main.TestFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
