--- a/Smartphone-sales-manager/nbproject/project.properties
+++ b/Smartphone-sales-manager/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.mysql-connector-java-8.0.27.jar=mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Smartphone-sales-manager
-main.class=Smartphone_sales_management.Main
+main.class=Smartphone_sales_management.UI.Main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
