--- a/Smartphone-sales-manager/nbproject/project.properties
+++ b/Smartphone-sales-manager/nbproject/project.properties
@@ -33,10 +33,30 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Smartphone-sales-manager
 excludes=
+file.reference.commons-codec-1.15.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\lib\\commons-codec-1.15.jar
+file.reference.commons-collections4-4.4.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\lib\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\ooxml-lib\\commons-compress-1.21.jar
+file.reference.commons-io-2.11.0.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\lib\\commons-io-2.11.0.jar
+file.reference.commons-logging-1.2.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\ooxml-lib\\commons-logging-1.2.jar
+file.reference.commons-math3-3.6.1.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\lib\\commons-math3-3.6.1.jar
+file.reference.curvesapi-1.07.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\ooxml-lib\\curvesapi-1.07.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=lib\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.log4j-api-2.17.2.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\lib\\log4j-api-2.17.2.jar
+file.reference.log4j-core-2.17.2.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\lib\\log4j-core-2.17.2.jar
 file.reference.mysql-connector-java-8.0.27.jar=mysql-connector-java-8.0.27.jar
+file.reference.poi-5.2.2.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\poi-5.2.2.jar
+file.reference.poi-ooxml-5.2.2.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\poi-ooxml-5.2.2.jar
+file.reference.poi-ooxml-full-5.2.2.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\poi-ooxml-full-5.2.2.jar
+file.reference.poi-ooxml-lite-5.2.2.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\poi-ooxml-lite-5.2.2.jar
+file.reference.slf4j-api-1.7.36.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\ooxml-lib\\slf4j-api-1.7.36.jar
+file.reference.SparseBitSet-1.2.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\lib\\SparseBitSet-1.2.jar
+file.reference.xml-apis-1.4.01.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\auxiliary\\xml-apis-1.4.01.jar
+file.reference.xml-apis-ext-1.3.04.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\auxiliary\\xml-apis-ext-1.3.04.jar
+file.reference.xmlbeans-5.0.3.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\ooxml-lib\\xmlbeans-5.0.3.jar
+file.reference.xmlgraphics-commons-2.6.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\auxiliary\\xmlgraphics-commons-2.6.jar
+file.reference.xmlsec-2.3.0.jar=lib\\poi-bin-5.2.2-20220312\\poi-bin-5.2.2\\auxiliary\\xmlsec-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +64,27 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.poi-ooxml-5.2.2.jar}:\
+    ${file.reference.poi-ooxml-full-5.2.2.jar}:\
+    ${file.reference.poi-ooxml-lite-5.2.2.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.curvesapi-1.07.jar}:\
+    ${file.reference.slf4j-api-1.7.36.jar}:\
+    ${file.reference.xmlbeans-5.0.3.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.log4j-api-2.17.2.jar}:\
+    ${file.reference.log4j-core-2.17.2.jar}:\
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.xml-apis-ext-1.3.04.jar}:\
+    ${file.reference.xmlgraphics-commons-2.6.jar}:\
+    ${file.reference.xmlsec-2.3.0.jar}:\
+    ${file.reference.poi-5.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
